package com.example.retaildiscount.model;

public enum ItemType {
    GROCERY,
    OTHER
}
