package com.example.retaildiscount.model;

public enum UserType {
    EMPLOYEE,
    AFFILIATE,
    CUSTOMER
}
